--- a/UdpNatPunchClient/Styles.xaml
+++ b/UdpNatPunchClient/Styles.xaml
@@ -40,7 +40,21 @@
         <Setter Property="TextDecorations" Value="Underline"/>
         <Setter Property="Text" Value="New messages!"/>
     </Style>
-    
+
+    <Style TargetType="TextBlock" x:Key="ImageExtensionTextBlock" BasedOn="{StaticResource BaseTextBlock}">
+        <Setter Property="Margin" Value="4"/>
+        <Setter Property="Padding" Value="2"/>
+        <Setter Property="HorizontalAlignment" Value="Right"/>
+        <Setter Property="VerticalAlignment" Value="Bottom"/>
+        <Setter Property="Foreground" Value="White"/>
+        <Setter Property="FontSize" Value="12"/>
+        <Setter Property="Background">
+            <Setter.Value>
+                <SolidColorBrush Opacity="0.7" Color="Black"/>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
     <Style TargetType="TextBox" x:Key="BaseTextBox">
         <Setter Property="FontSize" Value="14"/>
         <Setter Property="Margin" Value="2"/>
@@ -80,22 +94,27 @@
         <Setter Property="Margin" Value="6, 0, 6, 0"/>
     </Style>
 
-    <Style x:Key="ProfilePictureBorderStyle" TargetType="Border">
-        <Setter Property="Width" Value="200"/>
-        <Setter Property="Height" Value="200"/>
+    <Style x:Key="PictureBorderStyle" TargetType="Border">
+        <Setter Property="Width" Value="300"/>
+        <Setter Property="Height" Value="300"/>
         <Setter Property="BorderBrush" Value="Black"/>
         <Setter Property="BorderThickness" Value="2"/>
         <Setter Property="Margin" Value="2"/>
         <Setter Property="HorizontalAlignment" Value="Left"/>
     </Style>
 
-    <Style x:Key="PeerPictureBorderStyle" TargetType="Border" BasedOn="{StaticResource ProfilePictureBorderStyle}">
-        <Setter Property="Width" Value="100"/>
-        <Setter Property="Height" Value="100"/>
+    <Style x:Key="ProfilePictureBorderStyle" TargetType="Border" BasedOn="{StaticResource PictureBorderStyle}">
+        <Setter Property="Width" Value="200"/>
+        <Setter Property="Height" Value="200"/>
+    </Style>
+
+    <Style x:Key="PeerPictureBorderStyle" TargetType="Border" BasedOn="{StaticResource PictureBorderStyle}">
+        <Setter Property="Width" Value="70"/>
+        <Setter Property="Height" Value="70"/>
         <Setter Property="BorderThickness" Value="1"/>
     </Style>
     
-    <Style x:Key="ProfilePictureStyle" TargetType="Image">
+    <Style x:Key="BaseImageStyle" TargetType="Image">
         <Setter Property="Stretch" Value="Fill"/>
     </Style>
     
