--- a/UdpNatPunchClient/Styles.xaml
+++ b/UdpNatPunchClient/Styles.xaml
@@ -115,8 +115,9 @@
         <Setter Property="BorderThickness" Value="1"/>
     </Style>
     
-    <Style x:Key="BaseImageStyle" TargetType="Image">
-        <Setter Property="Stretch" Value="Fill"/>
+    <Style x:Key="BaseMediaElementStyle" TargetType="MediaElement">
+        <Setter Property="Stretch" Value="Uniform"/>
+        <Setter Property="StretchDirection" Value="DownOnly"/>
     </Style>
     
 </ResourceDictionary>
