--- a/UdpNatPunchClient/MainWindow.xaml
+++ b/UdpNatPunchClient/MainWindow.xaml
@@ -122,14 +122,27 @@
                                 TextDecorations="Underline"
                                 Text="{Binding ProfilePictureLoadingStatus, Converter={StaticResource ProfilePictureLoadingStatusConverter}}"/>
                         </StackPanel>
-                        <Button
+                        <StackPanel
                             Grid.Row="3"
-                            Style="{StaticResource BaseButton}"
-                            Command="{Binding ConnectToTrackerCommand}">
+                            Orientation="Horizontal">
+                            <Button
+                                Style="{StaticResource BaseButton}"
+                                Command="{Binding ConnectToTrackerCommand}">
+                                <TextBlock
+                                    Style="{StaticResource BaseTextBlock}"
+                                    Text="Connect to tracker"/>
+                            </Button>
                             <TextBlock
                                 Style="{StaticResource BaseTextBlock}"
-                                Text="Connect to tracker"/>
-                        </Button>
+                                VerticalAlignment="Center">
+                                <TextBlock.Text>
+                                    <MultiBinding Converter="{StaticResource TrackerConnectionStatusConverter}">
+                                        <Binding Path="TrackerConnectionStatus"/>
+                                        <Binding Path="ExpectedTracker"/>
+                                    </MultiBinding>
+                                </TextBlock.Text>
+                            </TextBlock>
+                        </StackPanel>
                         <StackPanel
                             Grid.Row="4"
                             Orientation="Horizontal">
@@ -299,12 +312,23 @@
                                             </StackPanel>
                                         </StackPanel>
                                     </DataTemplate>
+                                    
                                     <DataTemplate
                                         DataType="{x:Type models:ImageMessageModel}">
                                         <StackPanel
                                             Margin="5"
                                             HorizontalAlignment="{Binding Direction, Converter={StaticResource MessageDirectionAlignmentConverter}}">
-                                            <Grid>
+                                            <TextBlock
+                                                Style="{StaticResource MessageContentTextBlock}"
+                                                Visibility="{Binding IsImageNotLoaded, Converter={StaticResource BooleanToVisibilityConverter}}"
+                                                Text="{Binding Direction, Converter={StaticResource ImageMessageStateConverter}}"/>
+                                            <TextBlock
+                                                Style="{StaticResource MessageContentTextBlock}"
+                                                Foreground="Red"
+                                                Text="Error: can't load image"
+                                                Visibility="{Binding IsFailed, Converter={StaticResource BooleanToVisibilityConverter}}"/>
+                                            <Grid
+                                                Visibility="{Binding IsImageLoaded, Converter={StaticResource BooleanToVisibilityConverter}}">
                                                 <MediaElement
                                                     Style="{StaticResource BaseMediaElementStyle}"
                                                     myBehaviours:MediaElementBehaviours.IsAnimated="True"
@@ -333,10 +357,6 @@
                             </ListBox>
                             <Grid
                                 Grid.Row="2">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="100"/>
-                                    <ColumnDefinition Width="*"/>
-                                </Grid.ColumnDefinitions>
                                 <Button
                                     Grid.Column="0"
                                     Style="{StaticResource BaseButton}"
@@ -346,11 +366,6 @@
                                         Style="{StaticResource BaseTextBlock}"
                                         Text="Send image..."/>
                                 </Button>
-                                <TextBlock
-                                    Grid.Column="1"
-                                    Style="{StaticResource BaseTextBlock}"
-                                    Text="{Binding NumberOfSendingImages, StringFormat={}Sending {0} image(s)}"
-                                    Visibility="{Binding SendingAnyImages, Converter={StaticResource BooleanToVisibilityConverter}}"/>
                             </Grid>
                             <Grid
                                 Grid.Row="3">
